--- a/css/navigation.css
+++ b/css/navigation.css
@@ -33,8 +33,16 @@
 }
 
 
-.nav-dropdown:hover .dropdown-toggle::before {
-    transform: rotate(90deg);
+@media (hover: hover) and (pointer: fine) {
+    .nav-dropdown:hover .dropdown-toggle::before {
+        transform: rotate(90deg);
+    }
+    
+    .nav-dropdown:hover .dropdown-menu {
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
+    }
 }
 
 .dropdown-menu {
@@ -55,11 +63,6 @@
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
 }
 
-.nav-dropdown:hover .dropdown-menu {
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0);
-}
 
 .dropdown-item {
     display: block;
