--- a/css/navigation.css
+++ b/css/navigation.css
@@ -212,6 +212,11 @@
     right: 2rem;
     background: rgba(26, 26, 26, 0.9);
     border: 1px solid rgba(255, 51, 51, 0.6);
+    /* Remove mobile tap highlight and focus outline */
+    -webkit-tap-highlight-color: transparent;
+    outline: none;
+    user-select: none;
+    -webkit-touch-callout: none;
     border-radius: 50%;
     width: 52px;
     height: 52px;
